Added remaining bosses files and finished Fatescribe and added next and previous boss links

--- a/pages/bosses/eye-of-the-jailer.mdx
+++ b/pages/bosses/eye-of-the-jailer.mdx
@@ -27,3 +27,5 @@ Avoid players with [Desolation Beam](https://www.wowhead.com/spell=350847/des
 ## Phase 2 (25% - 0%)
 
 Boss gains stacks of [Immediate Extermination](https://www.wowhead.com/spell=348969/immediate-extermination) kill fast
+
+[< Previous Boss](/bosses/the-tarragrue) [Next Boss >](/bosses/the-nine)
