--- a/pages/bosses/painsmith-raznal.mdx
+++ b/pages/bosses/painsmith-raznal.mdx
@@ -23,3 +23,5 @@ Tanks will clear [Flameclasp Trap](https://www.wowhead.com/spell=348456/flamecla
 Avoid Spikes by finding the gap
 
 Avoid [Shadowsteeel Embers](https://www.wowhead.com/spell=355534/shadowsteel-embers)
+
+[< Previous Boss](/bosses/soulrender-dormazain) [Next Boss >](/bosses/guardian-of-the-first-ones)
