--- a/pages/bosses/remnant-of-nerzhul.mdx
+++ b/pages/bosses/remnant-of-nerzhul.mdx
@@ -15,3 +15,5 @@ Avoid [Shatter](https://www.wowhead.com/spell=351066/shatter) swirls at 80% 60% 
 ### Heroic
 
 Avoid pools left behind from [Lingering Malevolence](https://www.wowhead.com/spell=350490/lingering-malevolence)
+
+[< Previous Boss](/bosses/the-nine) [Next Boss >](/bosses/soulrender-dormazain)
