--- a/pages/bosses/soulrender-dormazain.mdx
+++ b/pages/bosses/soulrender-dormazain.mdx
@@ -11,3 +11,5 @@ Move to empty slice for [Torment](https://www.wowhead.com/spell=350217/torme
 Swap on each [Ruinblade](https://www.wowhead.com/spell=350422/ruinblade)
 
 Avoid [River of Souls](https://www.wowhead.com/spell=350851/river-of-souls) around Garrosh
+
+[< Previous Boss](/bosses/remnant-of-nerzhul) [Next Boss >](/bosses/painsmith-raznal)
