--- a/pages/bosses/the-nine.mdx
+++ b/pages/bosses/the-nine.mdx
@@ -21,3 +21,5 @@ Move boss out of [Annhylde's Bright Aegis](https://www.wowhead.com/spell=35
 Kill Kyra and Signe quickly
 
 Swap at three stacks of [Pierce Soul](https://www.wowhead.com/spell=350475/pierce-soul)
+
+[< Previous Boss](/bosses/eye-of-the-jailer) [Next Boss >](/bosses/remnant-of-nerzhul)
