--- a/pages/bosses/the-tarragrue.mdx
+++ b/pages/bosses/the-tarragrue.mdx
@@ -21,3 +21,5 @@ Can soak [Remnant: Mort'regar's Echoes](https://www.wowhead.com/spell=352389/
 Boss stops abilites and does 500% increased damage
 
 Taunt boss between tanks and kite
+
+[Next Boss >](/bosses/eye-of-the-jailer)
