--- a/pages/bosses/guardian-of-the-first-ones.mdx
+++ b/pages/bosses/guardian-of-the-first-ones.mdx
@@ -20,3 +20,5 @@ Stay in the [Radiant Energy](https://www.wowhead.com/spell=352394/radiant-energy
 Run away from [Energy Core](https://www.wowhead.com/npc=176583/energy-core) when it does [Meltdown](https://www.wowhead.com/spell=352589/meltdown)
 
 Soft enrage after third [Energy Core](https://www.wowhead.com/npc=176583/energy-core)
+
+[< Previous Boss](/bosses/painsmith-raznal) [Next Boss >](/bosses/)
