--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -7,3 +7,6 @@
 5. [Soulrender Dormazain](/bosses/soulrender-dormazain)
 6. [Painsmith Raznal](/bosses/painsmith-raznal)
 7. [Guardian of the First Ones](/bosses/guardian-of-the-first-ones)
+8. [Fatescribe Roh-Kalo](/bosses/fatescribe-roh-kalo)
+9. [Kel'Thuzad](/bosses/kelthuzad)
+10. [Sylvanas Windrunner](/bosses/sylvanas-windrunner)
