fixed broken previous and next boss links

--- a/pages/bosses/guardian-of-the-first-ones.mdx
+++ b/pages/bosses/guardian-of-the-first-ones.mdx
@@ -21,4 +21,4 @@ Run away from [Energy Core](https://www.wowhead.com/npc=176583/energy-core) when
 
 Soft enrage after third [Energy Core](https://www.wowhead.com/npc=176583/energy-core)
 
-[< Previous Boss](/bosses/painsmith-raznal) [Next Boss >](/bosses/)
+[< Previous Boss](/bosses/painsmith-raznal) [Next Boss >](/bosses/fatescribe-roh-kalo)
