Updated Fatescribe phase change percentages Added KT fight info

--- a/pages/bosses/fatescribe-roh-kalo.mdx
+++ b/pages/bosses/fatescribe-roh-kalo.mdx
@@ -1,6 +1,6 @@
 # Fatescribe Roh-Kalo
 
-## Phase 1
+## Phase 1 (100% - 40%)
 
 Avoid lines of [Fated Conjuction](https://www.wowhead.com/spell=350355/fated-conjunction) around room they will also be mirrored to other side
 
@@ -38,8 +38,8 @@ Kill [Fatespawn Anomaly](https://www.wowhead.com/npc=179010/fatespawn-anomaly) b
 
 Avoid [Fate Fragment](https://www.wowhead.com/spell=353162/fate-fragment) balls moving around the platform
 
-## Phase 3
+## Phase 3 (40% - 0%)
 
-Just phase 1 and phase 2 combined but only 30 seconds to move runes
+Just phase 1 and phase 2 combined but only 30 seconds to move runes and only people with [Runic Affinity](https://www.wowhead.com/spell=354964/runic-affinity) can move runes
 
 [< Previous Boss](/bosses/guardian-of-the-first-ones) [Next Boss >](/bosses/kelthuzad)
