--- a/pages/bosses/kelthuzad.mdx
+++ b/pages/bosses/kelthuzad.mdx
@@ -1,3 +1,19 @@
 # Kel'Thuzad
 
+## Phase 1 (100% - 0%)
+
+Avoid the puddle dropped by [Oblivion's Echo](https://www.wowhead.com/spell=347291/oblivions-echo)
+
+CC any [Frostbound Devoted](https://www.wowhead.com/npc=180840/frostbound-devoted) not being attacked
+
+Swap every [Soul Fracture](https://www.wowhead.com/spell=348071/soul-fracture)
+
+Kill [Soul Shard](https://www.wowhead.com/spell=357275/soul-shard) quickly
+
+Interrupt [Piercing Wail](https://www.wowhead.com/spell=348428/piercing-wail) or use [Oblivion's Echo](https://www.wowhead.com/spell=347291/oblivions-echo)
+
+After [Soul Shard](https://www.wowhead.com/spell=357275/soul-shard) is killed tank with [Soul Exhaustion](https://www.wowhead.com/spell=348978/soul-exhaustion) debuff pick up the shard
+
+Have to pick up all 3 shards within a minute
+
 [< Previous Boss](/bosses/fatescribe-roh-kalo) [Next Boss >](/bosses/sylvanas-windrunner)
